app/[locale]/(platform)/_components/Projects/ProjectsCard/ProjectsCardComponent.scss
@use "./../../../styles/mixins/mixins";

.projectsCards__Card {
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  justify-content: center;
  color: #fff;
  height: 100%;
  @include mixins.widthProjectCard(100%);
  @include mixins.paddingProjectsCard(0);

  transition: height 0.3s ease-in-out;

  .projectsCards_ImageWrapper {
    img {
      top: 0;
      height: 32rem;
      border-radius: 15px;
    }
  }

  .inner {
    position: absolute;
    display: flex;
    align-items: center;
    width: 100%;
    height: 100%;

    .projectsCards__FirstSheet {
      position: absolute;
      display: flex;
      align-items: center;
      justify-content: space-between;
      background-color: rgba(20, 66, 114, 0.7);
      backdrop-filter: blur(3px);
      border-radius: 15px 15px 0 0;
      top: 0;
      z-index: 4;
      height: 15%;
      width: 100%;
      transition: opacity 0.3s ease-in-out;

      .projectCards__SecondName {
        opacity: 0;
        margin-left: 1rem;
        transition: opacity 0.3s ease-in-out;
      }

      Button {
        margin-right: 1rem;
        padding: 0.5rem;
        height: 2.5rem;
        background-color: transparent;
        border: 1px #fff solid;

        &:first-child {
          font-size: x-large;
        }
      }
    }

    .projectsCards__SecondSheet {
      position: absolute;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      background-color: rgba(20, 66, 114, 0.7);
      backdrop-filter: blur(3px);
      height: 25%;
      width: 100%;
      overflow: hidden;
      transition: height 0.3s ease-in-out 0.6s, opacity 0.3s ease-in-out;

      .projectsCards__TextContainer {
        display: flex;
        flex-direction: column;
        gap: 1rem;
        width: 100%;

        p {
          position: relative;
          padding: 0 1rem;
          opacity: 0;
          transition: opacity 0.3s ease-in-out;
          word-break: keep-all;
        }
      }

      .projectsCards__NameContainer {
        position: absolute;
        padding-bottom: 4rem;
        transition: opacity 0.3s ease-in-out;

        .projectsCards__Name {
          font-size: 1.5rem;
          text-align: center;
        }
      }

      .projectsCards__Links {
        position: absolute;
        display: flex;
        flex-flow: row nowrap;
        justify-content: center;
        align-items: center;
        gap: 1rem;
        padding-top: 3rem;
        width: 40%;
        transition: opacity 0.3s ease-in-out;

        a {
          width: 100%;
          font-size: 2.5rem;
          transition: opacity 0.3s ease-in-out, transform 0.3s ease-out;

          &:nth-child(2) {
            border: #fff 1px solid;
            border-radius: 10px;
          }

          &:hover {
            transform: scale(1.2);
          }
        }
      }
    }

    .projectsCards__ThirdSheet {
      position: absolute;
      display: flex;
      justify-content: center;
      align-items: center;
      background-color: rgba(20, 66, 114, 0.7);
      backdrop-filter: blur(3px);
      border-radius: 0 0 15px 15px;
      bottom: 0;
      height: 15%;
      width: 100%;
      transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;

      .projectsCards__TechImg {
        display: flex;
        justify-content: space-around;
        img {
          width: 18%;
          height: 18%;
          object-fit: contain;
          visibility: hidden;
          transition: visibility 0.3s ease-in-out, opacity 0.3s ease-in-out,
            transform 0.3s ease-in-out;
        }
      }
    }
  }
}

.projectsCards__Card.expanded {
  .projectsCards__FirstSheet .projectCards__SecondName {
    opacity: 1;
    transition-delay: 1.2s;
  }

  .projectsCards__SecondSheet {
    height: 100%;
    transition-delay: 0.8s;
    .projectsCards__TextContainer {
      p {
        opacity: 1;
        transition-delay: 1s;
      }
    }

    .projectsCards__NameContainer {
      opacity: 0;
      transition-delay: 0.3s;
    }

    .projectsCards__Links {
      a {
        &:nth-child(1) {
          opacity: 0;
          transition-delay: 0.5s;
        }
        &:nth-child(2) {
          opacity: 0;
          transition-delay: 0.6s;
        }
      }
    }
  }

  .projectsCards__ThirdSheet {
    .projectsCards__TechImg img {
      transition-delay: 1.5s;
      visibility: visible;
      opacity: 1;
      transform: translateX(0);
    }
  }
}

.projectsCards__Card.collapsed {
  .projectsCards__FirstSheet .projectCards__SecondName {
    opacity: 0;
  }

  .projectsCards__SecondSheet {
    height: 25%;
    transition-delay: 1s;
    .projectsCards__TextContainer {
      p {
        transition-delay: 0.5s;
        opacity: 0;
      }
    }

    .projectsCards__NameContainer {
      opacity: 1;
      transition-delay: 1.2s;
    }

    .projectsCards__Links {
      a {
        &:nth-child(1) {
          opacity: 1;
          transition-delay: 1.3s;
        }
        &:nth-child(2) {
          opacity: 1;
          transition-delay: 1.4s;
        }
      }
    }
  }

  .projectsCards__ThirdSheet {
    .projectsCards__TechImg img {
      visibility: hidden;
      opacity: 0;
      transform: translateX(-100%);
    }
  }
}

